--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,3 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://fabricmc.net/use
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.20
-loader_version=0.8.9+build.203
-# Mod Properties
-mod_version=0.0.1-SNAPSHOT
-maven_group=de.lolhens
-archives_base_name=blockshifter
-# Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.14.6+build.377-1.16
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.jvmargs=-Xmx2G
