--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'mc-blockshifter'
 
 include ':fabric-1.16.1'
 include ':fabric-1.16.2'
+include ':forge-1.16.1'
+include ':forge-1.16.2'
