--- a/forge-1.15.2/build.gradle
+++ b/forge-1.15.2/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 archivesBaseName = parent.project.archives_base_name
-version = parent.version + "+forge-1.16.1"
+version = parent.version + "+forge-1.15.2"
 group = parent.group
 mod_id = parent.project.mod_id
 mod_author = parent.project.mod_author
@@ -33,7 +33,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'snapshot', version: '20200514-1.15.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -110,10 +110,11 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.108'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.43'
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 
+    implementation 'org.spongepowered:mixin:0.8'
     implementation "scalable-cats-force:ScalableCatsForce-2.13.2-build:2:dev"
     implementation "org.scala-lang:scala-library:2.13.3"
     implementation group: 'org.typelevel', name: "cats-core_2.13", version: '2.1.0'
