--- a/forge-1.16.2/build.gradle
+++ b/forge-1.16.2/build.gradle
@@ -1,15 +1,19 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://dist.creeper.host/Sponge/maven' }
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath 'de.lolhens:java-mixin-stubber:0.0.2'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'scala'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
@@ -17,6 +21,8 @@ apply plugin: 'maven-publish'
 archivesBaseName = parent.project.archives_base_name
 version = parent.version + "+forge-1.16.2"
 group = parent.group
+mod_id = parent.project.mod_id
+mod_author = parent.project.mod_author
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -38,6 +44,8 @@ minecraft {
         client {
             workingDirectory project.file('run')
 
+            arg '-mixin.config=' + mod_id + '.mixins.json'
+
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
@@ -45,7 +53,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                blockshifter {
                     source sourceSets.main
                 }
             }
@@ -54,6 +62,8 @@ minecraft {
         server {
             workingDirectory project.file('run')
 
+            arg '-mixin.config=' + mod_id + '.mixins.json'
+
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
@@ -61,7 +71,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                blockshifter {
                     source sourceSets.main
                 }
             }
@@ -76,10 +86,10 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'blockshifter', '--all', '--output', file('src/generated/resources/')
+            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/')
 
             mods {
-                examplemod {
+                blockshifter {
                     source sourceSets.main
                 }
             }
@@ -102,9 +112,37 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.2-33.0.32'
 
+    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+
     implementation "scalable-cats-force:ScalableCatsForce-2.13.3-build:3:dev"
     implementation "org.scala-lang:scala-library:2.13.3"
     implementation group: 'org.typelevel', name: "cats-core_2.13", version: '2.1.0'
+}
+
+def mixinstubsDir = file("$compileJava.temporaryDir/mixinstubs")
+
+sourceSets.main.java.srcDirs += mixinstubsDir
+
+def mixinstubs = task('mixinstubs') {
+    doLast {
+        delete(mixinstubsDir)
+        de.lolhens.jstubber.Stubber.MIXIN.stubDirectory(sourceSets.main.scala.srcDirs[0].toPath(), mixinstubsDir.toPath())
+    }
+}
+
+compileJava.dependsOn(mixinstubs)
+
+compileJava.doLast {
+    delete(compileJava.destinationDir)
+    delete(mixinstubsDir)
+}
+
+compileScala.doFirst {
+    compileScala.options.compilerArgs += compileJava.options.compilerArgs
+}
+
+mixin {
+    add sourceSets.main, "${mod_id}.refmap.json"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -112,12 +150,13 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : project.name,
-                "Specification-Vendor"    : "LolHens",
+                "Specification-Vendor"    : mod_author,
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "LolHens",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Vendor"   : mod_author,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "${mod_id}.mixins.json"
         ])
     }
     from {
