--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ org.gradle.daemon=false
 org.gradle.parallel=false
 org.gradle.jvmargs=-Xmx2G
 # Mod Properties
+archives_base_name=blockshifter
 mod_version=0.0.1-SNAPSHOT
 maven_group=de.lolhens
-archives_base_name=blockshifter
+mod_id=blockshifter
+mod_author=LolHens
