--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,8 @@ rootProject.name = 'mc-blockshifter'
 include ':fabric-1.15.2'
 include ':fabric-1.16.1'
 include ':fabric-1.16.2'
+include ':fabric-1.16.4'
 include ':forge-1.15.2'
 include ':forge-1.16.1'
 include ':forge-1.16.2'
+include ':forge-1.16.4'
