--- a/forge-1.16.1/build.gradle
+++ b/forge-1.16.1/build.gradle
@@ -104,6 +104,7 @@ configurations {
 
 repositories {
     maven { url = 'https://minecraft.curseforge.com/api/maven/' }
+    metadataSources { artifact() }
 }
 
 dependencies {
