--- a/fabric-1.18/gradle.properties
+++ b/fabric-1.18/gradle.properties
@@ -1,8 +1,8 @@
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.46
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
 loader_version=0.12.8
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.16.4+build.392-1.16
+fabric_version=0.43.1+1.18
